--- a/Cheat Engine/launcher/cheatengine.lpi
+++ b/Cheat Engine/launcher/cheatengine.lpi
@@ -9,7 +9,7 @@
         <MainUnitHasTitleStatement Value="False"/>
       </Flags>
       <MainUnit Value="0"/>
-      <Title Value="Cheat Engine launcher"/>
+      <Title Value="MC launcher"/>
       <ResourceType Value="res"/>
       <Icon Value="0"/>
       <ActiveWindowIndexAtStart Value="0"/>
