--- a/Cheat Engine/cheatengine.lpi
+++ b/Cheat Engine/cheatengine.lpi
@@ -6,7 +6,7 @@
     <General>
       <MainUnit Value="0"/>
       <AutoCreateForms Value="False"/>
-      <Title Value="Cheat Engine 6.4"/>
+      <Title Value="MyCheat 6.4"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <XPManifest>
@@ -24,10 +24,10 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="6"/>
       <MinorVersionNr Value="4"/>
-      <BuildNr Value="4087"/>
+      <BuildNr Value="4088"/>
       <Language Value=""/>
       <CharSet Value=""/>
-      <StringTable CompanyName="Cheat Engine" FileDescription="Cheat Engine" ProductVersion="6.4"/>
+      <StringTable CompanyName="MyCheat" FileDescription="MyCheat" ProductVersion="6.4"/>
     </VersionInfo>
     <BuildModes Count="5" Active="debug-nomt">
       <Item1 Name="Release 32-Bit" Default="True"/>
@@ -282,7 +282,7 @@
         <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <TopLine Value="969"/>
-        <CursorPos X="5" Y="1005"/>
+        <CursorPos X="58" Y="991"/>
         <UsageCount Value="211"/>
         <Bookmarks Count="2">
           <Item0 X="5" Y="6101" ID="8"/>
@@ -3299,7 +3299,7 @@
         <UsageCount Value="11"/>
       </Unit332>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="29">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="disassemblerComments.pas"/>
         <Caret Line="359" Column="26" TopLine="342"/>
@@ -3333,93 +3333,89 @@
         <Caret Line="5703" Column="18" TopLine="5686"/>
       </Position8>
       <Position9>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="7224" Column="38" TopLine="7670"/>
-      </Position9>
-      <Position10>
         <Filename Value="StructuresFrm2.pas"/>
         <Caret Line="3026" Column="76" TopLine="3011"/>
+      </Position9>
+      <Position10>
+        <Filename Value="MainUnit.pas"/>
+        <Caret Line="7660" Column="3" TopLine="7624"/>
       </Position10>
       <Position11>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="7660" Column="3" TopLine="7624"/>
+        <Caret Line="8827" Column="19" TopLine="8797"/>
       </Position11>
       <Position12>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="8827" Column="19" TopLine="8797"/>
+        <Caret Line="4691" Column="33" TopLine="4679"/>
       </Position12>
       <Position13>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="4691" Column="33" TopLine="4679"/>
+        <Caret Line="3603" Column="31" TopLine="3584"/>
       </Position13>
       <Position14>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="3603" Column="31" TopLine="3584"/>
+        <Caret Line="1021" Column="54" TopLine="1003"/>
       </Position14>
       <Position15>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="1021" Column="54" TopLine="1003"/>
+        <Caret Line="936" Column="47" TopLine="918"/>
       </Position15>
       <Position16>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="936" Column="47" TopLine="918"/>
+        <Caret Line="3603" Column="31" TopLine="3585"/>
       </Position16>
       <Position17>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="3603" Column="31" TopLine="3585"/>
+        <Caret Line="969" Column="31" TopLine="951"/>
       </Position17>
       <Position18>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="969" Column="31" TopLine="951"/>
+        <Caret Line="3603" Column="31" TopLine="3585"/>
       </Position18>
       <Position19>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="3603" Column="31" TopLine="3585"/>
+        <Caret Line="921" Column="27" TopLine="903"/>
       </Position19>
       <Position20>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="921" Column="27" TopLine="903"/>
+        <Caret Line="929" Column="70" TopLine="903"/>
       </Position20>
       <Position21>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="929" Column="70" TopLine="903"/>
+        <Caret Line="936" Column="54" TopLine="906"/>
       </Position21>
       <Position22>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="936" Column="54" TopLine="906"/>
+        <Caret Line="969" Column="38" TopLine="951"/>
       </Position22>
       <Position23>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="969" Column="38" TopLine="951"/>
+        <Caret Line="1016" Column="47" TopLine="998"/>
       </Position23>
       <Position24>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="1016" Column="47" TopLine="998"/>
+        <Caret Line="1021" Column="61" TopLine="998"/>
       </Position24>
       <Position25>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="1021" Column="61" TopLine="998"/>
+        <Caret Line="1023" Column="211" TopLine="998"/>
       </Position25>
       <Position26>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="1023" Column="211" TopLine="998"/>
+        <Caret Line="1026" Column="33" TopLine="998"/>
       </Position26>
       <Position27>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="1026" Column="33" TopLine="998"/>
+        <Caret Line="7224" Column="38" TopLine="7188"/>
       </Position27>
       <Position28>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="7224" Column="38" TopLine="7188"/>
+        <Caret Line="1026" Column="67" TopLine="1008"/>
       </Position28>
       <Position29>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="1026" Column="67" TopLine="1008"/>
-      </Position29>
-      <Position30>
-        <Filename Value="MainUnit.pas"/>
         <Caret Line="3724" Column="31" TopLine="3707"/>
-      </Position30>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
