--- a/Cheat Engine/cheatengine.lpi
+++ b/Cheat Engine/cheatengine.lpi
@@ -24,12 +24,12 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="6"/>
       <MinorVersionNr Value="4"/>
-      <BuildNr Value="4102"/>
+      <BuildNr Value="4095"/>
       <Language Value=""/>
       <CharSet Value=""/>
       <StringTable CompanyName="MyCheat" FileDescription="MyCheat" ProductVersion="6.4"/>
     </VersionInfo>
-    <BuildModes Count="5" Active="Release 64-Bit">
+    <BuildModes Count="5" Active="Release 32-Bit">
       <Item1 Name="Release 32-Bit" Default="True"/>
       <Item2 Name="Release 64-Bit">
         <CompilerOptions>
@@ -282,7 +282,6 @@
         <EditorIndex Value="1"/>
         <TopLine Value="4630"/>
         <CursorPos X="65" Y="4648"/>
-        <ComponentState Value="1"/>
         <UsageCount Value="211"/>
         <Bookmarks Count="2">
           <Item0 X="5" Y="6101" ID="8"/>
@@ -520,8 +519,8 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <EditorIndex Value="33"/>
-        <TopLine Value="83"/>
-        <CursorPos X="6" Y="92"/>
+        <TopLine Value="167"/>
+        <CursorPos X="53" Y="190"/>
         <UsageCount Value="201"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -777,12 +776,12 @@
         <ComponentName Value="frmAutoInject"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="29"/>
         <TopLine Value="1789"/>
-        <CursorPos X="33" Y="1797"/>
+        <CursorPos X="22" Y="1807"/>
         <UsageCount Value="221"/>
         <Loaded Value="True"/>
-        <LoadedDesigner Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit53>
       <Unit54>
@@ -1656,14 +1655,13 @@
       <Unit142>
         <Filename Value="LuaHandler.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="5"/>
-        <TopLine Value="5921"/>
-        <CursorPos X="5" Y="5935"/>
+        <TopLine Value="5368"/>
+        <CursorPos Y="5376"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
           <EditorIndex Value="31"/>
-          <TopLine Value="5821"/>
+          <TopLine Value="5820"/>
           <CursorPos X="10" Y="280"/>
         </ExtraEditor1>
         <UsageCount Value="200"/>
@@ -2051,8 +2049,8 @@
         <Filename Value="networkInterface.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="27"/>
-        <TopLine Value="95"/>
-        <CursorPos X="7" Y="104"/>
+        <TopLine Value="1454"/>
+        <CursorPos X="28" Y="1472"/>
         <UsageCount Value="222"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -3064,6 +3062,7 @@
         <TopLine Value="2838"/>
         <CursorPos X="3" Y="2854"/>
         <UsageCount Value="41"/>
+        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit296>
       <Unit297>
         <Filename Value="frmnetworkdatacompressionunit.pas"/>
@@ -3343,124 +3342,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="custombase85.pas"/>
-        <Caret Line="52" Column="3" TopLine="2"/>
+        <Filename Value="hexviewunit.pas"/>
+        <Caret Line="172" Column="47" TopLine="165"/>
       </Position1>
       <Position2>
-        <Filename Value="custombase85.pas"/>
-        <Caret Line="10" Column="45"/>
+        <Filename Value="hexviewunit.pas"/>
+        <Caret Line="2008" Column="42" TopLine="1989"/>
       </Position2>
       <Position3>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="5939" Column="61" TopLine="5920"/>
+        <Filename Value="cesupport.pas"/>
+        <Caret Line="198" Column="9" TopLine="176"/>
       </Position3>
       <Position4>
-        <Filename Value="aboutunit.pas"/>
-        <Caret Line="190" Column="53" TopLine="167"/>
+        <Filename Value="custombase85.pas"/>
+        <Caret Line="52" Column="3" TopLine="2"/>
       </Position4>
       <Position5>
-        <Filename Value="CEFuncProc.pas"/>
-        <Caret Line="2293" Column="67" TopLine="2281"/>
+        <Filename Value="custombase85.pas"/>
+        <Caret Line="10" Column="45"/>
       </Position5>
       <Position6>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="5939" Column="54" TopLine="5920"/>
+        <Caret Line="5939" Column="61" TopLine="5920"/>
       </Position6>
       <Position7>
-        <Filename Value="CEFuncProc.pas"/>
-        <Caret Line="2299" Column="16" TopLine="2281"/>
+        <Filename Value="aboutunit.pas"/>
+        <Caret Line="190" Column="53" TopLine="167"/>
       </Position7>
       <Position8>
-        <Filename Value="aboutunit.pas"/>
-        <Caret Line="185" Column="47" TopLine="167"/>
+        <Filename Value="CEFuncProc.pas"/>
+        <Caret Line="2293" Column="67" TopLine="2281"/>
       </Position8>
       <Position9>
-        <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="2696" Column="22" TopLine="2666"/>
-      </Position9>
-      <Position10>
-        <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="1807" Column="22" TopLine="1789"/>
-      </Position10>
-      <Position11>
-        <Filename Value="hexviewunit.pas"/>
-        <Caret Line="2008" Column="35" TopLine="1989"/>
-      </Position11>
-      <Position12>
-        <Filename Value="custombase85.pas"/>
-        <Caret Line="8" Column="50"/>
-      </Position12>
-      <Position13>
         <Filename Value="MainUnit.pas"/>
         <Caret Line="5939" Column="54" TopLine="5920"/>
-      </Position13>
-      <Position14>
+      </Position9>
+      <Position10>
+        <Filename Value="CEFuncProc.pas"/>
+        <Caret Line="2299" Column="16" TopLine="2281"/>
+      </Position10>
+      <Position11>
+        <Filename Value="aboutunit.pas"/>
+        <Caret Line="185" Column="47" TopLine="167"/>
+      </Position11>
+      <Position12>
         <Filename Value="frmautoinjectunit.pas"/>
         <Caret Line="2696" Column="22" TopLine="2666"/>
-      </Position14>
-      <Position15>
-        <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="32" Column="62" TopLine="14"/>
-      </Position15>
-      <Position16>
+      </Position12>
+      <Position13>
         <Filename Value="frmautoinjectunit.pas"/>
         <Caret Line="1807" Column="22" TopLine="1789"/>
+      </Position13>
+      <Position14>
+        <Filename Value="hexviewunit.pas"/>
+        <Caret Line="2008" Column="35" TopLine="1989"/>
+      </Position14>
+      <Position15>
+        <Filename Value="custombase85.pas"/>
+        <Caret Line="8" Column="50"/>
+      </Position15>
+      <Position16>
+        <Filename Value="MainUnit.pas"/>
+        <Caret Line="5939" Column="54" TopLine="5920"/>
       </Position16>
       <Position17>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="4648" Column="65" TopLine="4630"/>
+        <Filename Value="frmautoinjectunit.pas"/>
+        <Caret Line="2696" Column="22" TopLine="2666"/>
       </Position17>
       <Position18>
-        <Filename Value="frmExeTrainerGeneratorUnit.pas"/>
-        <Caret Line="276" Column="37" TopLine="259"/>
+        <Filename Value="frmautoinjectunit.pas"/>
+        <Caret Line="32" Column="62" TopLine="14"/>
       </Position18>
       <Position19>
-        <Filename Value="cetranslator.pas"/>
-        <Caret Line="287" Column="19" TopLine="263"/>
+        <Filename Value="frmautoinjectunit.pas"/>
+        <Caret Line="1807" Column="22" TopLine="1789"/>
       </Position19>
       <Position20>
-        <Filename Value="cetranslator.pas"/>
-        <Caret Line="88" Column="100" TopLine="69"/>
+        <Filename Value="MainUnit.pas"/>
+        <Caret Line="4648" Column="65" TopLine="4630"/>
       </Position20>
       <Position21>
-        <Filename Value="cetranslator.pas"/>
-        <Caret Line="91" Column="100" TopLine="69"/>
+        <Filename Value="frmExeTrainerGeneratorUnit.pas"/>
+        <Caret Line="316" Column="47" TopLine="318"/>
       </Position21>
       <Position22>
-        <Filename Value="custombase85.pas"/>
-        <Caret Line="7" Column="65"/>
+        <Filename Value="frmExeTrainerGeneratorUnit.pas"/>
+        <Caret Line="276" Column="37" TopLine="259"/>
       </Position22>
       <Position23>
         <Filename Value="cetranslator.pas"/>
-        <Caret Line="94" Column="100" TopLine="69"/>
+        <Caret Line="287" Column="19" TopLine="263"/>
       </Position23>
       <Position24>
         <Filename Value="cetranslator.pas"/>
-        <Caret Line="91" Column="100" TopLine="69"/>
+        <Caret Line="88" Column="100" TopLine="69"/>
       </Position24>
       <Position25>
-        <Filename Value="frmExeTrainerGeneratorUnit.pas"/>
-        <Caret Line="298" Column="37" TopLine="280"/>
+        <Filename Value="cetranslator.pas"/>
+        <Caret Line="91" Column="100" TopLine="69"/>
       </Position25>
       <Position26>
-        <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="2696" Column="22" TopLine="2666"/>
+        <Filename Value="custombase85.pas"/>
+        <Caret Line="7" Column="65"/>
       </Position26>
       <Position27>
-        <Filename Value="aboutunit.pas"/>
-        <Caret Line="190" Column="53" TopLine="167"/>
+        <Filename Value="cetranslator.pas"/>
+        <Caret Line="94" Column="100" TopLine="69"/>
       </Position27>
       <Position28>
-        <Filename Value="networkInterface.pas"/>
-        <Caret Line="1472" Column="28" TopLine="1454"/>
+        <Filename Value="cetranslator.pas"/>
+        <Caret Line="91" Column="100" TopLine="69"/>
       </Position28>
       <Position29>
-        <Filename Value="networkInterface.pas"/>
-        <Caret Line="1075" Column="24" TopLine="1066"/>
+        <Filename Value="frmExeTrainerGeneratorUnit.pas"/>
+        <Caret Line="298" Column="37" TopLine="280"/>
       </Position29>
       <Position30>
-        <Filename Value="LuaHandler.pas"/>
-        <Caret Line="5376" TopLine="5368"/>
+        <Filename Value="frmautoinjectunit.pas"/>
+        <Caret Line="2696" Column="22" TopLine="2666"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
