--- a/Cheat Engine/cheatengine.lpi
+++ b/Cheat Engine/cheatengine.lpi
@@ -279,10 +279,9 @@
         <ComponentName Value="MainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
         <TopLine Value="4677"/>
-        <CursorPos X="30" Y="4699"/>
+        <CursorPos X="20" Y="4690"/>
         <UsageCount Value="211"/>
         <Bookmarks Count="2">
           <Item0 X="5" Y="6103" ID="8"/>
@@ -882,9 +881,10 @@
         <ComponentName Value="FindWindow"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="14"/>
-        <TopLine Value="21"/>
-        <CursorPos X="54" Y="110"/>
+        <TopLine Value="175"/>
+        <CursorPos X="3" Y="177"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <LoadedDesigner Value="True"/>
@@ -3343,124 +3343,124 @@
     </Units>
     <JumpHistory Count="30" HistoryIndex="29">
       <Position1>
-        <Filename Value="hexviewunit.pas"/>
-        <Caret Line="2008" Column="42" TopLine="1989"/>
-      </Position1>
-      <Position2>
         <Filename Value="cesupport.pas"/>
         <Caret Line="198" Column="9" TopLine="176"/>
+      </Position1>
+      <Position2>
+        <Filename Value="custombase85.pas"/>
+        <Caret Line="52" Column="3" TopLine="2"/>
       </Position2>
       <Position3>
         <Filename Value="custombase85.pas"/>
-        <Caret Line="52" Column="3" TopLine="2"/>
+        <Caret Line="10" Column="45"/>
       </Position3>
       <Position4>
-        <Filename Value="custombase85.pas"/>
-        <Caret Line="10" Column="45"/>
-      </Position4>
-      <Position5>
         <Filename Value="MainUnit.pas"/>
         <Caret Line="5939" Column="61" TopLine="5920"/>
-      </Position5>
-      <Position6>
+      </Position4>
+      <Position5>
         <Filename Value="aboutunit.pas"/>
         <Caret Line="190" Column="53" TopLine="167"/>
-      </Position6>
-      <Position7>
+      </Position5>
+      <Position6>
         <Filename Value="CEFuncProc.pas"/>
         <Caret Line="2293" Column="67" TopLine="2281"/>
-      </Position7>
-      <Position8>
+      </Position6>
+      <Position7>
         <Filename Value="MainUnit.pas"/>
         <Caret Line="5939" Column="54" TopLine="5920"/>
-      </Position8>
-      <Position9>
+      </Position7>
+      <Position8>
         <Filename Value="CEFuncProc.pas"/>
         <Caret Line="2299" Column="16" TopLine="2281"/>
-      </Position9>
-      <Position10>
+      </Position8>
+      <Position9>
         <Filename Value="aboutunit.pas"/>
         <Caret Line="185" Column="47" TopLine="167"/>
+      </Position9>
+      <Position10>
+        <Filename Value="frmautoinjectunit.pas"/>
+        <Caret Line="2696" Column="22" TopLine="2666"/>
       </Position10>
       <Position11>
         <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="2696" Column="22" TopLine="2666"/>
+        <Caret Line="1807" Column="22" TopLine="1789"/>
       </Position11>
       <Position12>
-        <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="1807" Column="22" TopLine="1789"/>
-      </Position12>
-      <Position13>
         <Filename Value="hexviewunit.pas"/>
         <Caret Line="2008" Column="35" TopLine="1989"/>
-      </Position13>
-      <Position14>
+      </Position12>
+      <Position13>
         <Filename Value="custombase85.pas"/>
         <Caret Line="8" Column="50"/>
-      </Position14>
-      <Position15>
+      </Position13>
+      <Position14>
         <Filename Value="MainUnit.pas"/>
         <Caret Line="5939" Column="54" TopLine="5920"/>
+      </Position14>
+      <Position15>
+        <Filename Value="frmautoinjectunit.pas"/>
+        <Caret Line="2696" Column="22" TopLine="2666"/>
       </Position15>
       <Position16>
         <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="2696" Column="22" TopLine="2666"/>
+        <Caret Line="32" Column="62" TopLine="14"/>
       </Position16>
       <Position17>
         <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="32" Column="62" TopLine="14"/>
+        <Caret Line="1807" Column="22" TopLine="1789"/>
       </Position17>
       <Position18>
-        <Filename Value="frmautoinjectunit.pas"/>
-        <Caret Line="1807" Column="22" TopLine="1789"/>
-      </Position18>
-      <Position19>
         <Filename Value="MainUnit.pas"/>
         <Caret Line="4648" Column="65" TopLine="4630"/>
-      </Position19>
-      <Position20>
+      </Position18>
+      <Position19>
         <Filename Value="frmExeTrainerGeneratorUnit.pas"/>
         <Caret Line="276" Column="37" TopLine="259"/>
+      </Position19>
+      <Position20>
+        <Filename Value="cetranslator.pas"/>
+        <Caret Line="287" Column="19" TopLine="263"/>
       </Position20>
       <Position21>
         <Filename Value="cetranslator.pas"/>
-        <Caret Line="287" Column="19" TopLine="263"/>
+        <Caret Line="88" Column="100" TopLine="69"/>
       </Position21>
       <Position22>
         <Filename Value="cetranslator.pas"/>
-        <Caret Line="88" Column="100" TopLine="69"/>
+        <Caret Line="91" Column="100" TopLine="69"/>
       </Position22>
       <Position23>
-        <Filename Value="cetranslator.pas"/>
-        <Caret Line="91" Column="100" TopLine="69"/>
-      </Position23>
-      <Position24>
         <Filename Value="custombase85.pas"/>
         <Caret Line="7" Column="65"/>
+      </Position23>
+      <Position24>
+        <Filename Value="cetranslator.pas"/>
+        <Caret Line="94" Column="100" TopLine="69"/>
       </Position24>
       <Position25>
         <Filename Value="cetranslator.pas"/>
-        <Caret Line="94" Column="100" TopLine="69"/>
+        <Caret Line="91" Column="100" TopLine="69"/>
       </Position25>
       <Position26>
-        <Filename Value="cetranslator.pas"/>
-        <Caret Line="91" Column="100" TopLine="69"/>
-      </Position26>
-      <Position27>
         <Filename Value="frmExeTrainerGeneratorUnit.pas"/>
         <Caret Line="298" Column="37" TopLine="280"/>
-      </Position27>
-      <Position28>
+      </Position26>
+      <Position27>
         <Filename Value="frmautoinjectunit.pas"/>
         <Caret Line="2696" Column="22" TopLine="2666"/>
+      </Position27>
+      <Position28>
+        <Filename Value="MainUnit.pas"/>
+        <Caret Line="4681" Column="35" TopLine="4667"/>
       </Position28>
       <Position29>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="4681" Column="35" TopLine="4667"/>
+        <Caret Line="4695" Column="15" TopLine="4677"/>
       </Position29>
       <Position30>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="4695" Column="15" TopLine="4677"/>
+        <Filename Value="FindWindowUnit.pas"/>
+        <Caret Line="111" Column="54" TopLine="76"/>
       </Position30>
     </JumpHistory>
   </ProjectOptions>
@@ -3483,6 +3483,7 @@
     </Parsing>
     <CodeGeneration>
       <SmartLinkUnit Value="True"/>
+      <RelocatableUnit Value="True"/>
       <TargetCPU Value="i386"/>
       <TargetOS Value="win32"/>
       <Optimizations>
