--- a/Cheat Engine/cheatengine.lpi
+++ b/Cheat Engine/cheatengine.lpi
@@ -24,7 +24,7 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="6"/>
       <MinorVersionNr Value="4"/>
-      <BuildNr Value="4105"/>
+      <BuildNr Value="4110"/>
       <Language Value=""/>
       <CharSet Value=""/>
       <StringTable CompanyName="MyCheat" FileDescription="MyCheat" ProductVersion="6.4"/>
@@ -256,7 +256,7 @@
       <Unit0>
         <Filename Value="cheatengine.lpr"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="11"/>
+        <EditorIndex Value="12"/>
         <TopLine Value="74"/>
         <CursorPos X="61" Y="83"/>
         <UsageCount Value="211"/>
@@ -343,7 +343,7 @@
       <Unit9>
         <Filename Value="disassembler.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="25"/>
+        <EditorIndex Value="26"/>
         <TopLine Value="10952"/>
         <CursorPos X="82" Y="7"/>
         <UsageCount Value="202"/>
@@ -353,7 +353,7 @@
       <Unit10>
         <Filename Value="byteinterpreter.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="26"/>
+        <EditorIndex Value="27"/>
         <TopLine Value="645"/>
         <CursorPos X="59" Y="7"/>
         <UsageCount Value="200"/>
@@ -379,7 +379,7 @@
       <Unit13>
         <Filename Value="autoassembler.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="21"/>
+        <EditorIndex Value="22"/>
         <TopLine Value="2685"/>
         <CursorPos X="30" Y="1128"/>
         <UsageCount Value="200"/>
@@ -408,7 +408,7 @@
       <Unit16>
         <Filename Value="MainUnit2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="34"/>
+        <EditorIndex Value="35"/>
         <TopLine Value="3"/>
         <CursorPos X="51" Y="126"/>
         <UsageCount Value="203"/>
@@ -437,9 +437,13 @@
         <ComponentName Value="formSettings"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <TopLine Value="1223"/>
-        <CursorPos Y="1229"/>
+        <IsVisibleTab Value="True"/>
+        <EditorIndex Value="7"/>
+        <TopLine Value="1061"/>
+        <CursorPos X="22" Y="1063"/>
         <UsageCount Value="203"/>
+        <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit19>
       <Unit20>
@@ -518,7 +522,7 @@
         <ComponentName Value="About"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="36"/>
+        <EditorIndex Value="37"/>
         <TopLine Value="167"/>
         <CursorPos X="53" Y="190"/>
         <UsageCount Value="201"/>
@@ -640,7 +644,7 @@
       <Unit40>
         <Filename Value="memscan.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="16"/>
+        <EditorIndex Value="17"/>
         <TopLine Value="4346"/>
         <CursorPos X="22" Y="4647"/>
         <UsageCount Value="209"/>
@@ -706,7 +710,7 @@
       <Unit47>
         <Filename Value="speedhack2.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="10"/>
+        <EditorIndex Value="11"/>
         <TopLine Value="65"/>
         <CursorPos X="27" Y="239"/>
         <UsageCount Value="202"/>
@@ -745,7 +749,7 @@
       <Unit51>
         <Filename Value="OpenSave.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="17"/>
+        <EditorIndex Value="18"/>
         <TopLine Value="866"/>
         <CursorPos X="3" Y="879"/>
         <ExtraEditorCount Value="1"/>
@@ -776,7 +780,7 @@
         <ComponentName Value="frmAutoInject"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="33"/>
+        <EditorIndex Value="34"/>
         <TopLine Value="1789"/>
         <CursorPos X="40" Y="9"/>
         <UsageCount Value="221"/>
@@ -797,7 +801,7 @@
         <ComponentName Value="MemoryBrowser"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="20"/>
+        <EditorIndex Value="21"/>
         <TopLine Value="1677"/>
         <CursorPos X="22" Y="10"/>
         <UsageCount Value="220"/>
@@ -808,7 +812,7 @@
       <Unit56>
         <Filename Value="disassemblerviewlinesunit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="23"/>
+        <EditorIndex Value="24"/>
         <TopLine Value="53"/>
         <CursorPos X="15" Y="428"/>
         <UsageCount Value="218"/>
@@ -818,7 +822,7 @@
       <Unit57>
         <Filename Value="disassemblerviewunit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="22"/>
+        <EditorIndex Value="23"/>
         <TopLine Value="97"/>
         <CursorPos X="16" Y="24"/>
         <UsageCount Value="218"/>
@@ -881,7 +885,7 @@
         <ComponentName Value="FindWindow"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="18"/>
+        <EditorIndex Value="19"/>
         <TopLine Value="175"/>
         <CursorPos X="31" Y="9"/>
         <UsageCount Value="203"/>
@@ -1061,7 +1065,7 @@
         <ComponentName Value="frmSaveMemoryRegion"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="32"/>
+        <EditorIndex Value="33"/>
         <TopLine Value="210"/>
         <CursorPos X="50" Y="9"/>
         <UsageCount Value="205"/>
@@ -1230,7 +1234,7 @@
         <ComponentName Value="frmStructures"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="15"/>
+        <EditorIndex Value="16"/>
         <TopLine Value="883"/>
         <CursorPos X="65" Y="28"/>
         <UsageCount Value="204"/>
@@ -1386,7 +1390,7 @@
       <Unit113>
         <Filename Value="hexviewunit.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="28"/>
+        <EditorIndex Value="29"/>
         <TopLine Value="1989"/>
         <CursorPos X="55" Y="9"/>
         <UsageCount Value="208"/>
@@ -1587,7 +1591,7 @@
       <Unit134>
         <Filename Value="dbk32\DBK32functions.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="13"/>
+        <EditorIndex Value="14"/>
         <TopLine Value="1772"/>
         <CursorPos X="91" Y="290"/>
         <UsageCount Value="204"/>
@@ -1655,12 +1659,12 @@
       <Unit142>
         <Filename Value="LuaHandler.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="8"/>
+        <EditorIndex Value="9"/>
         <TopLine Value="5368"/>
         <CursorPos X="32" Y="17"/>
         <ExtraEditorCount Value="1"/>
         <ExtraEditor1>
-          <EditorIndex Value="35"/>
+          <EditorIndex Value="36"/>
           <TopLine Value="5820"/>
           <CursorPos X="10" Y="280"/>
         </ExtraEditor1>
@@ -1675,7 +1679,7 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="frmLuaEngineUnit"/>
-        <EditorIndex Value="9"/>
+        <EditorIndex Value="10"/>
         <TopLine Value="795"/>
         <CursorPos X="53" Y="10"/>
         <UsageCount Value="201"/>
@@ -1763,7 +1767,7 @@
       <Unit152>
         <Filename Value="ceguicomponents.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="38"/>
+        <EditorIndex Value="39"/>
         <TopLine Value="608"/>
         <CursorPos X="28" Y="620"/>
         <UsageCount Value="236"/>
@@ -1773,7 +1777,7 @@
       <Unit153>
         <Filename Value="LuaCaller.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="39"/>
+        <EditorIndex Value="40"/>
         <TopLine Value="1602"/>
         <CursorPos X="33" Y="14"/>
         <UsageCount Value="234"/>
@@ -1791,7 +1795,7 @@
       <Unit155>
         <Filename Value="cesupport.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="29"/>
+        <EditorIndex Value="30"/>
         <TopLine Value="137"/>
         <CursorPos X="30" Y="156"/>
         <UsageCount Value="209"/>
@@ -1934,7 +1938,7 @@
       <Unit170>
         <Filename Value="disassemblerComments.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="27"/>
+        <EditorIndex Value="28"/>
         <TopLine Value="341"/>
         <CursorPos X="59" Y="12"/>
         <UsageCount Value="200"/>
@@ -2048,7 +2052,7 @@
       <Unit183>
         <Filename Value="networkInterface.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="31"/>
+        <EditorIndex Value="32"/>
         <TopLine Value="1454"/>
         <CursorPos X="13" Y="11"/>
         <UsageCount Value="222"/>
@@ -2127,7 +2131,7 @@
         <ComponentName Value="frmStructures2"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="7"/>
+        <EditorIndex Value="8"/>
         <TopLine Value="44"/>
         <CursorPos X="99" Y="10"/>
         <UsageCount Value="201"/>
@@ -2422,7 +2426,7 @@
       <Unit226>
         <Filename Value="LuaImage.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="37"/>
+        <EditorIndex Value="38"/>
         <TopLine Value="39"/>
         <CursorPos X="55" Y="45"/>
         <UsageCount Value="236"/>
@@ -2609,7 +2613,7 @@
         <Filename Value="custombase85.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="CustomBase85"/>
-        <EditorIndex Value="30"/>
+        <EditorIndex Value="31"/>
         <CursorPos X="50" Y="8"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
@@ -2675,7 +2679,7 @@
         <ComponentName Value="frmSnapshotHandler"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <EditorIndex Value="14"/>
+        <EditorIndex Value="15"/>
         <TopLine Value="42"/>
         <CursorPos Y="60"/>
         <UsageCount Value="200"/>
@@ -2757,7 +2761,7 @@
         <Filename Value="networkdebuggerinterface.pas"/>
         <IsPartOfProject Value="True"/>
         <UnitName Value="NetworkDebuggerInterface"/>
-        <EditorIndex Value="24"/>
+        <EditorIndex Value="25"/>
         <TopLine Value="147"/>
         <CursorPos X="52" Y="8"/>
         <UsageCount Value="204"/>
@@ -2873,7 +2877,7 @@
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
         <UnitName Value="FrmMemoryRecordDropdownSettingsUnit"/>
-        <EditorIndex Value="19"/>
+        <EditorIndex Value="20"/>
         <TopLine Value="34"/>
         <CursorPos X="10" Y="8"/>
         <UsageCount Value="214"/>
@@ -3342,7 +3346,7 @@
       <Unit333>
         <Filename Value="MCFuncProc.pas"/>
         <IsPartOfProject Value="True"/>
-        <EditorIndex Value="12"/>
+        <EditorIndex Value="13"/>
         <TopLine Value="1310"/>
         <CursorPos X="140" Y="1319"/>
         <UsageCount Value="21"/>
@@ -3363,7 +3367,6 @@
         <ComponentName Value="frmServiceDescriptorTables"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="6"/>
         <CursorPos X="38" Y="11"/>
         <UsageCount Value="10"/>
@@ -3372,65 +3375,121 @@
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit335>
     </Units>
-    <JumpHistory Count="15" HistoryIndex="14">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
-        <Filename Value="cheatengine.lpr"/>
-        <Caret Line="196" Column="31" TopLine="177"/>
+        <Filename Value="MainUnit.pas"/>
+        <Caret Line="9" Column="47"/>
       </Position1>
       <Position2>
         <Filename Value="cheatengine.lpr"/>
-        <Caret Line="6" Column="10"/>
+        <Caret Line="198" Column="3" TopLine="189"/>
       </Position2>
       <Position3>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="4690" Column="20" TopLine="4677"/>
-      </Position3>
-      <Position4>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="4" Column="76"/>
-      </Position4>
-      <Position5>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="6933" Column="42" TopLine="6915"/>
-      </Position5>
-      <Position6>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="9" Column="47"/>
-      </Position6>
-      <Position7>
-        <Filename Value="cheatengine.lpr"/>
-        <Caret Line="198" Column="3" TopLine="189"/>
-      </Position7>
-      <Position8>
         <Filename Value="MCFuncProc.pas"/>
         <Caret Column="8"/>
-      </Position8>
-      <Position9>
+      </Position3>
+      <Position4>
         <Filename Value="cheatengine.lpr"/>
         <Caret Line="83" Column="63" TopLine="74"/>
-      </Position9>
-      <Position10>
+      </Position4>
+      <Position5>
         <Filename Value="cheatengine.lpr"/>
         <Caret Line="86" Column="34" TopLine="74"/>
-      </Position10>
-      <Position11>
+      </Position5>
+      <Position6>
         <Filename Value="MCFuncProc.pas"/>
         <Caret Line="5" Column="19"/>
-      </Position11>
-      <Position12>
+      </Position6>
+      <Position7>
         <Filename Value="MCFuncProc.pas"/>
         <Caret Line="9" Column="25"/>
-      </Position12>
-      <Position13>
+      </Position7>
+      <Position8>
         <Filename Value="cetranslator.pas"/>
         <Caret Line="69" Column="38" TopLine="69"/>
+      </Position8>
+      <Position9>
+        <Filename Value="addresslisthandlerunit.pas"/>
+      </Position9>
+      <Position10>
+        <Filename Value="ServiceDescriptorTables.pas"/>
+      </Position10>
+      <Position11>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1229" TopLine="1223"/>
+      </Position11>
+      <Position12>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="290" Column="45" TopLine="281"/>
+      </Position12>
+      <Position13>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="299" Column="75" TopLine="281"/>
       </Position13>
       <Position14>
-        <Filename Value="addresslisthandlerunit.pas"/>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="312" Column="14" TopLine="287"/>
       </Position14>
       <Position15>
-        <Filename Value="ServiceDescriptorTables.pas"/>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1043" Column="41" TopLine="1036"/>
       </Position15>
+      <Position16>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="313" Column="37" TopLine="303"/>
+      </Position16>
+      <Position17>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="314" Column="55" TopLine="303"/>
+      </Position17>
+      <Position18>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1067" Column="12" TopLine="1051"/>
+      </Position18>
+      <Position19>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1068" Column="23" TopLine="1059"/>
+      </Position19>
+      <Position20>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1069" Column="25" TopLine="1060"/>
+      </Position20>
+      <Position21>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1061" Column="21" TopLine="1060"/>
+      </Position21>
+      <Position22>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="129" Column="5" TopLine="120"/>
+      </Position22>
+      <Position23>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1061" Column="27" TopLine="1046"/>
+      </Position23>
+      <Position24>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="129" Column="26" TopLine="121"/>
+      </Position24>
+      <Position25>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1069" Column="25" TopLine="1056"/>
+      </Position25>
+      <Position26>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1066" Column="22" TopLine="1056"/>
+      </Position26>
+      <Position27>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1069" Column="28" TopLine="1056"/>
+      </Position27>
+      <Position28>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1071" Column="28" TopLine="1056"/>
+      </Position28>
+      <Position29>
+        <Filename Value="formsettingsunit.pas"/>
+        <Caret Line="1072" Column="28" TopLine="1057"/>
+      </Position29>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
