--- a/Cheat Engine/cheatengine.lpi
+++ b/Cheat Engine/cheatengine.lpi
@@ -6,7 +6,7 @@
     <General>
       <MainUnit Value="0"/>
       <AutoCreateForms Value="False"/>
-      <Title Value="......"/>
+      <Title Value="MyCheat"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
       <XPManifest>
@@ -24,7 +24,7 @@
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="6"/>
       <MinorVersionNr Value="4"/>
-      <BuildNr Value="4112"/>
+      <BuildNr Value="4114"/>
       <Language Value=""/>
       <CharSet Value=""/>
       <StringTable CompanyName="MyCheat" FileDescription="MyCheat" ProductVersion="6.4"/>
@@ -257,8 +257,8 @@
         <Filename Value="cheatengine.lpr"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="22"/>
-        <TopLine Value="74"/>
-        <CursorPos X="61" Y="83"/>
+        <TopLine Value="188"/>
+        <CursorPos X="30" Y="196"/>
         <UsageCount Value="211"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -402,20 +402,21 @@
         <ComponentName Value="ProcessWindow"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="8"/>
-        <TopLine Value="288"/>
+        <TopLine Value="284"/>
         <CursorPos X="16" Y="284"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
+        <LoadedDesigner Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit15>
       <Unit16>
         <Filename Value="MainUnit2.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="45"/>
         <TopLine Value="3"/>
-        <CursorPos X="51" Y="126"/>
+        <CursorPos X="15" Y="16"/>
         <UsageCount Value="203"/>
         <Loaded Value="True"/>
         <DefaultSyntaxHighlighter Value="Delphi"/>
@@ -3083,7 +3084,6 @@
         <TopLine Value="2838"/>
         <CursorPos X="3" Y="2854"/>
         <UsageCount Value="41"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit296>
       <Unit297>
         <Filename Value="frmnetworkdatacompressionunit.pas"/>
@@ -3400,7 +3400,7 @@
         <Loaded Value="True"/>
       </Unit336>
     </Units>
-    <JumpHistory Count="30" HistoryIndex="28">
+    <JumpHistory Count="29" HistoryIndex="28">
       <Position1>
         <Filename Value="MainUnit.pas"/>
         <Caret Line="6859" Column="5" TopLine="6840"/>
@@ -3423,104 +3423,100 @@
       </Position5>
       <Position6>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2442" Column="14" TopLine="2552"/>
+        <Caret Line="2439" Column="109" TopLine="2419"/>
       </Position6>
       <Position7>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2439" Column="109" TopLine="2419"/>
+        <Caret Line="2561" Column="23" TopLine="2546"/>
       </Position7>
       <Position8>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2561" Column="23" TopLine="2546"/>
+        <Caret Line="2439" Column="94" TopLine="2420"/>
       </Position8>
       <Position9>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2439" Column="94" TopLine="2420"/>
+        <Caret Line="2459" Column="16" TopLine="2431"/>
       </Position9>
       <Position10>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2459" Column="16" TopLine="2431"/>
+        <Caret Line="2553" Column="29" TopLine="2525"/>
       </Position10>
       <Position11>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2553" Column="29" TopLine="2525"/>
+        <Caret Line="2556" Column="32" TopLine="2528"/>
       </Position11>
       <Position12>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2556" Column="32" TopLine="2528"/>
+        <Caret Line="2660" Column="13" TopLine="2647"/>
       </Position12>
       <Position13>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2660" Column="13" TopLine="2647"/>
+        <Caret Line="2662" Column="13" TopLine="2647"/>
       </Position13>
       <Position14>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2662" Column="13" TopLine="2647"/>
+        <Caret Line="2663" Column="13" TopLine="2647"/>
       </Position14>
       <Position15>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2663" Column="13" TopLine="2647"/>
+        <Caret Line="2668" Column="13" TopLine="2647"/>
       </Position15>
       <Position16>
         <Filename Value="MainUnit.pas"/>
-        <Caret Line="2668" Column="13" TopLine="2647"/>
+        <Caret Line="2671" Column="13" TopLine="2647"/>
       </Position16>
       <Position17>
-        <Filename Value="MainUnit.pas"/>
-        <Caret Line="2671" Column="13" TopLine="2647"/>
+        <Filename Value="ProcessWindowUnit.pas"/>
+        <Caret Line="113" Column="24" TopLine="86"/>
       </Position17>
       <Position18>
         <Filename Value="ProcessWindowUnit.pas"/>
-        <Caret Line="113" Column="24" TopLine="86"/>
+        <Caret Line="12" Column="32" TopLine="4"/>
       </Position18>
       <Position19>
         <Filename Value="ProcessWindowUnit.pas"/>
-        <Caret Line="12" Column="32" TopLine="4"/>
+        <Caret Line="113" Column="18" TopLine="105"/>
       </Position19>
       <Position20>
         <Filename Value="ProcessWindowUnit.pas"/>
-        <Caret Line="113" Column="18" TopLine="105"/>
+        <Caret Line="580" Column="17" TopLine="548"/>
       </Position20>
       <Position21>
         <Filename Value="ProcessWindowUnit.pas"/>
-        <Caret Line="580" Column="17" TopLine="548"/>
+        <Caret Line="12" Column="20"/>
       </Position21>
       <Position22>
         <Filename Value="ProcessWindowUnit.pas"/>
-        <Caret Line="12" Column="20"/>
+        <Caret Line="88" TopLine="84"/>
       </Position22>
       <Position23>
         <Filename Value="ProcessWindowUnit.pas"/>
-        <Caret Line="88" TopLine="84"/>
+        <Caret Line="579" Column="17" TopLine="547"/>
       </Position23>
       <Position24>
-        <Filename Value="ProcessWindowUnit.pas"/>
-        <Caret Line="579" Column="17" TopLine="547"/>
+        <Filename Value="NewKernelHandler.pas"/>
+        <Caret Line="469" TopLine="448"/>
       </Position24>
       <Position25>
-        <Filename Value="StructuresFrm2.pas"/>
-        <Caret Line="10" Column="99" TopLine="44"/>
+        <Filename Value="NewKernelHandler.pas"/>
+        <Caret Line="1354" Column="22" TopLine="1346"/>
       </Position25>
       <Position26>
         <Filename Value="NewKernelHandler.pas"/>
-        <Caret Line="469" TopLine="448"/>
+        <Caret Line="1353" Column="48" TopLine="1337"/>
       </Position26>
       <Position27>
-        <Filename Value="NewKernelHandler.pas"/>
-        <Caret Line="1354" Column="22" TopLine="1346"/>
-      </Position27>
-      <Position28>
-        <Filename Value="NewKernelHandler.pas"/>
-        <Caret Line="1353" Column="48" TopLine="1337"/>
-      </Position28>
-      <Position29>
         <Filename Value="ProcessWindowUnit.pas"/>
         <Caret Line="295" Column="20" TopLine="232"/>
+      </Position27>
+      <Position28>
+        <Filename Value="cheatengine.lpr"/>
+        <Caret Line="83" Column="61" TopLine="74"/>
+      </Position28>
+      <Position29>
+        <Filename Value="MainUnit2.pas"/>
+        <Caret Line="126" Column="51" TopLine="3"/>
       </Position29>
-      <Position30>
-        <Filename Value="MCFuncProc.pas"/>
-        <Caret Line="135" Column="11" TopLine="118"/>
-      </Position30>
     </JumpHistory>
   </ProjectOptions>
   <CompilerOptions>
